Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99641

MacOS Monterey - QCamera stops render after a second

    XMLWordPrintable

Details

    • macOS
    • f7dc6003ac (qt/qtmultimedia/dev) 7a3638c735 (qt/qtmultimedia/6.3) 72def95c8a (qt/qtmultimedia/6.2) 72def95c8a (qt/tqtc-qtmultimedia/6.2) 7a3638c735 (qt/tqtc-qtmultimedia/6.3) 72def95c8a (qt/tqtc-qtmultimedia/6.2)

    Description

      In the QML Camera Example from Qt/Examples/Qt-6.2.2/ only a few first frames get rendered in the preview although the camera is still running. Also, it takes a lot of time to open a camera. Happens in 100 % of cases with MBP built-in camera. The example works as expected on macOS 11. Camera and microphone permissions were granted.

      The last log I could see from debugging

      2022-01-07 14:23:10.754564-0500 camera[1668:26419] [] [0x11d021a20] CVDisplayLink::start
      2022-01-07 14:23:10.754647-0500 camera[1668:26597] [] [0x600002960310] CVXTime::reset
      2022-01-07 14:23:10.766416-0500 camera[1668:26419] [] [0x11d021a00] CVDisplayLinkStop
      2022-01-07 14:23:10.766445-0500 camera[1668:26419] [] [0x11d021a20] CVDisplayLink::stop

      Attachments

        1. camera.png
          camera.png
          1016 kB
        2. console_output.png
          console_output.png
          167 kB
        3. microphone.png
          microphone.png
          1.21 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            kkateryna34531 kateryna kostiuk
            Votes:
            5 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes